# statatest

./: .commitlintrc.yml  .gitignore  .markdownlint.json  .markdownlintignore  .markdownlintrc  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml  pytest.ini  release-please-config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  release-please.yml  release.yml
action/: README.md  action.yml
docs/: README.md  changelog.md  contributing.md  index.md  migration.md
docs/ci/: action.md  codecov.md  docker.md  github-actions.md
docs/extensions/: econ.md  index.md
docs/getting-started/: first-test.md  installation.md  quickstart.md
docs/guide/: assertions.md  configuration.md  coverage.md  fixtures.md  troubleshooting.md
docs/reference/: assertions.md  cli.md  config.md  econ-assertions.md  econ-fixtures.md  fixtures.md
docs/use-cases/: network-data.md  panel-data.md
examples/: README.md
examples/fixtures/: conftest.do  test_with_fixtures.do
examples/simple/: test_example.do
src/stata/assertions/: assert_equal.ado  assert_in_range.ado  assert_noerror.ado  assert_true.ado  assert_var_exists.ado
src/statatest/: README.md  __init__.py  cli.py  config.py  constants.py  coverage.py  discovery.py  fixtures.py  instrument.py  models.py  report.py  runner.py
src/statatest/ado/: README.md
src/statatest/core/: README.md  __init__.py  config.py  constants.py
src/statatest/coverage/: README.md  __init__.py  instrument.py
src/statatest/discovery/: README.md  parser.py
src/statatest/execution/: README.md  executor.py  parser.py  wrapper.py
src/statatest/fixtures/: README.md
src/statatest/reporting/: README.md  junit.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_coverage.py  test_discovery.py  test_fixtures.py  test_instrument.py  test_report.py  test_runner.py
tests/stata/: conftest.do  test_assertions.do  test_fixtures.do
(+28 files in other folders)
