[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statatest"
version = "0.1.0"
description = "Pytest-inspired testing and code coverage framework for Stata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jose Ignacio Gonzalez Rojas", email = "j.i.gonzalez-rojas@lse.ac.uk" }
]
keywords = ["stata", "testing", "coverage", "pytest", "econometrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
statatest = "statatest.cli:main"

[project.urls]
Homepage = "https://github.com/jigonr/statatest"
Documentation = "https://jigonr.github.io/statatest/"
Repository = "https://github.com/jigonr/statatest"
Issues = "https://github.com/jigonr/statatest/issues"
Changelog = "https://github.com/jigonr/statatest/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/statatest"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build]
include = [
    "src/statatest/**/*.py",
    "src/statatest/ado/**/*.ado",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
